# driada

./: .codecov.yml  .gitignore  .readthedocs.yaml  =4.1.0  AUTHORS.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOC_VERIFICATION_FINAL_REPORT.txt  DOC_VERIFICATION_REPORT.txt  LICENSE  NUMBA_0.60_RIDGE_ISSUE.md  PUBLICATIONS.md  README.md  README_INTENSE.md  TODO_NUMBA_CONFIG.md  __init__.py  _backlog.md  _intense_backlog.md  all_modules.txt  analyze_test_suite.py  apply_rst_fixes.py  batch_coverage_results.json  batch_coverage_results_v2.json  benchmark_output.txt  benchmark_output_fixed.txt  build_docs.sh  check_kinetics_source.py  check_mixed_selectivity_quick.py  check_see_also_references.py  comprehensive_test_report.json  coverage.json  coverage.xml  coverage_debug_dim_reduction.txt  coverage_debug_experiment.txt  coverage_debug_experiment_synthetic.txt  coverage_debug_gdrive.txt  coverage_debug_information.txt  coverage_debug_integration.txt  (+98 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: doc-consistency.yml  draft-pdf.yml  publish.yml  run-doctests.yml  tests.yml  verify-docs.yml
analysis_r2_scaling_bias_2025_11_03/scripts/: investigate_root_causes.py
analysis_reconstruction_r2_investigation_2025_11_03/scripts/: 1_analyze_high_snr_neuron.py  2_compare_amplitude_methods.py  3_investigate_amplitude_extraction.py  4_investigate_deconvolution_bug.py
analysis_signal_scaling_2025_11_03/scripts/: 1_analyze_signal_scaling.py  2_multi_neuron_analysis.py  3_visualize.py
archive/: repo.py
configs/: README.md
coverage-report CI/: batch_coverage_results_v2.json  coverage.xml
dim_reduction/: data.py  dim_reduction.py  dr_base.py  embedding.py  graph.py  neural.py
dimensionality/: effective.py  utils.py
docs/: INTENSE_FLOW.md  changelog.rst  conf.py  contributing.rst  disentanglement_pipeline.md  examples.rst  index.rst  installation.rst  intense_mathematical_framework.md  license.rst  quickstart.rst  requirements.txt
docs/api/: dim_reduction.rst  dimensionality.rst  (+9 more)
examples/: __init__.py  basic_usage.py  compare_dr_methods.py  dr_simplified_api_demo.py  extract_circular_manifold.py  extract_spatial_map.py  extract_task_variables.py  full_pipeline.py  intense_dr_pipeline.py  loo_dr_analysis.py  mixed_selectivity.py  neuron_basic_usage.py  recursive_embedding_example.py  rsa_example.py  selectivity_manifold_mapper_demo.py  spatial_metrics_complete.py  spike_reconstruction_comparison.py  visual_utils_demo.py  visualize_mixed_embeddings.py
experiment/: build.py  exp_base.py  exp_build.py  neuron.py  wavelet_event_detection.py
gdrive/: _gd_utils.py  auth.py  download.py  gdrive_utils.py  upload.py
information/: gcmi.py  info_base.py  info_main.py  info_utils.py  ksg.py  main.py
intens/: intens_base.py  pipelines.py  stats.py  visual.py
intense/: visual.py
network/: matrix_utils.py  net_base.py  net_main.py  randomization.py  spectral.py
networks/: _matrix_utils.py  _net_utils.py  drawing.py  matrix_utils.py  net_main.py  net_utils.py  quantum.py  randomization.py  spectral.py
notebooks/: 00_driada_overview.ipynb  01_data_loading_and_neurons.ipynb  01_quick_start.ipynb  02_selectivity_detection_intense.ipynb  02_understanding_results.ipynb  03_population_geometry_dr.ipynb  03_real_data_workflow.ipynb  04_functional_networks.ipynb  04_network_analysis.ipynb  05_advanced_capabilities.ipynb  06_recurrence_analysis.ipynb  README.md  __init__.py
rst_fixes/: api_dim_reduction_fixes.rst  api_dim_reduction_neural_methods_fixes.rst  api_dimensionality_fixes.rst  api_experiment_fixes.rst  api_gdrive_fixes.rst  api_information_fixes.rst  api_intense_fixes.rst  api_network_fixes.rst  api_rsa_fixes.rst  api_utils_fixes.rst
signal/: decomposition.py  sig_base.py
signals/: complexity.py  main.py  sig_base.py  sig_main.py  theory.py
temp/: debug_full_signal_with_stripes.py  debug_improved_visibility_fixed.py  debug_mixed_selectivity_detection.py  test_timeseries_types.py  visualize_ts_types.py
tests/: README_test_optimization.md  conftest.py  conftest_fast.py  test_2d_spatial_manifold.py  test_3d_spatial_manifold.py  test_ae_vae_advanced.py  test_ae_vae_comparison.py  test_ae_vae_losses.py  test_api_imports.py  test_calcium_dynamics.py  test_circular_manifold.py  test_conditional_mi_and_interaction.py  test_correct_cov_spectrum.py  test_disentanglement.py  test_dr.py  test_dr_extended.py  test_duplicate_behavior.py  test_eff_dim.py  test_entropy.py  test_exp.py  test_gcmi_functions.py  test_gcmi_jit.py  test_integration.py  test_intens.py  test_intense.py  test_intense_fast.py  test_intense_pipelines.py  test_linear.py  test_manifold_metrics.py  test_manifold_neural_data.py  test_mixed_population.py  test_network.py  test_neuron.py  test_nwb.py  test_parallel.py  test_selectivity_mapper.py  test_spike_reconstruction.py  test_vae_fix.py  test_visual.py  test_visual_utils.py
tools/: EXAMPLE_VALIDATION_PROTOCOL.md  NOTEBOOK_VALIDATION_PROTOCOL.md  RELEASE_CHECKLIST.md  analyze_doc_examples.py  analyze_docstrings.py  batch_coverage_runner.py  benchmark_fft_optimizations.py  benchmark_mts_mts_fft.py  build_info_fft.py  compare_mi_testing_approaches.py  comprehensive_doc_verification_report_v2.py  comprehensive_test_analysis.py  create_notebook_00.py  create_notebook_01.py  create_notebook_02.py  create_notebook_03.py  create_notebook_04.py  create_notebook_05.py  create_notebook_06.py  debug_doctest.py  disentanglement_filters.py  doc_consistency_checker.py  doc_consistency_pre_commit.py  fix_doc_examples.py  isolated_coverage_runner.py  load_synchronized_experiments.py  recurrence_fof_test.py  run_all_examples.py  run_all_notebooks.py  run_cross_analysis.py  run_doctests.py  run_intense_analysis.py  run_intense_with_timeout.py  run_isolated_test.py  test_flakiness_checker.py  test_timing_report.py  truncate_npz.py  update_imports.py  validate_examples.py  validate_intense_benchmark.py  (+5 more)
utils/: data.py  gif.py  naming.py  output.py  plot.py
(+387 files in other folders)
